Name:            that
Version:         0.0
Description:     cross machine which/whence/man tool
License:         BSD3
License-file:    LICENSE
Author:          Mark Hibberd
Maintainer:      mark@hibberd.id.au
Build-Type:      Simple
Cabal-Version:   >=1.2

Library
  Hs-Source-Dirs:  src tests
  Exposed-Modules: That.Cli
                   That.Api
  GHC-Options:     -Wall
  Build-Depends:   base

Executable that
  Hs-Source-Dirs:  src tests
  Main-is:         Main.hs
  Build-Depends:   base
  Other-Modules:   That.Cli
                   

